--- a/src/q-digest.ipynb
+++ b/src/q-digest.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "\n",
     "class Qdigest:\n",
-    "    # Класс для T-Digest\n",
+    "    # Класс для Q-Digest\n",
     "\n",
     "    def __init__(self, delta=0.01, k=25, cx=1.1):\n",
     "        # delta: максимальная ошибка при вычислении перцентилей\n",
@@ -67,7 +67,7 @@
     "        self.reset()\n",
     "\n",
     "    def reset(self):\n",
-    "        # Сбросить T-Digest\n",
+    "        # Сбросить Q-Digest\n",
     "        self.centroids.clear()\n",
     "        self.n = 0\n",
     "        self.nreset += 1\n",
@@ -75,7 +75,7 @@
     "        self.compressing = False\n",
     "\n",
     "    def add(self, x, n=1):\n",
-    "        # Добавить новое значение в T-Digest\n",
+    "        # Добавить новое значение в Q-Digest\n",
     "        if not isinstance(x, list):\n",
     "            x = [x]\n",
     "        for item in x:\n",
@@ -101,7 +101,7 @@
     "            (upper.cumn - lower.cumn)\n",
     "\n",
     "    def _digest(self, x, n):\n",
-    "        # Добавить новое значение в T-Digest\n",
+    "        # Добавить новое значение в Q-Digest\n",
     "        if self.size() == 0:\n",
     "            self._new_centroid(x, n, 0)\n",
     "        else:\n",
@@ -152,11 +152,11 @@
     "            return lower\n",
     "\n",
     "    def size(self):\n",
-    "        # Получить количество центроидов в T-Digest\n",
+    "        # Получить количество центроидов в Q-Digest\n",
     "        return len(self.centroids)\n",
     "\n",
     "    def compress(self):\n",
-    "        # Сжать данные в T-Digest\n",
+    "        # Сжать данные в Q-Digest\n",
     "        if self.compressing:\n",
     "            return\n",
     "        points = self.to_list()\n",
